<resources>
    <string name="app_name">lawsection</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="description">Law is a system of rules created and enforced through social or governmental institutions to regulate behavior, with its precise definition a matter of longstanding debate. It has been variously described as a science and the art of justice. State-enforced laws can be made by a group legislature or by a single legislator, resulting in statutes; by the executive through decrees and regulations; or established by judges through precedent, usually in common law jurisdictions. Private individuals may create legally binding contracts, including arbitration agreements that adopt alternative ways of resolving disputes to standard court litigation. The creation of laws themselves may be influenced by a constitution, written or tacit, and the rights encoded therein. The law shapes politics, economics, history and society in various ways and serves as a mediator of relations between people.
Legal systems vary between countries, with their differences analysed in comparative law. In civil law jurisdictions, a legislature or other central body codifies and consolidates the law. In common law systems, judges make binding case law through precedent, although on occasion this may be overturned by a higher court or the legislature. Historically, religious law influenced secular matters, and is still used in some religious communities. Sharia law based on Islamic principles is used as the primary legal system in several countries, including Iran and Saudi Arabia.
Law\'s scope can be divided into two domains. Public law concerns government and society, including constitutional law, administrative law, and criminal law. Private law deals with legal disputes between individuals and/or organisations in areas such as contracts, property, torts/delicts and commercial law. This distinction is stronger in civil law countries, particularly those with a separate system of administrative courts; by contrast, the public-private law divide is less pronounced in common law jurisdictions.</string>
    <string name="Function_of_Civil_Law">The core function of Civil Law is to resolve disagreements and disputes between individuals, families or organizations by providing due and equitable compensations to the victims.Unlike Criminal Law, The Civil law focuses more on the providing compensation to the victims rether than giving punishment to the accused. There are Civil Law Courts which takes and resolve civil matters with the help of refined lawyers and judges.Few Examples of Civil Suits are: A car crash victim files a Civil Suit against the driver to claim for the loss or injury sustained in the accident. One company files a Civil suit against another for wrong products sent or wrong claims made at the time of the deal. Awife files a Civil Suit against his husband and in-laws for unjustified behaviour against her.
</string>
    <string name="Real_Estate_Law">All the matters related to property, rent, buying/selling of a house, landlord problems/harassment etc are covered under this body of law.</string>
    <string name="Business_or_Commercial_Law">Business ethics related to B2B organizations, Fraud, employee-employer complaints etc are covered under this body of law.
</string>
    <string name="Educational_Law">All matters related to Education and Educational Firms are covered under this body of law. For example, Student-teacher complaints, false registration of Educational organizations, any act of deception by educational firms etc. Also, it exerts the right of education to every child.</string>
    <string name="Consumer_Law">All the matters related to the customer law like unjust pricing, non-fulfilment of consented products etc falls under this law.</string>
    <string name="Tax_Law">Every matter based on taxation like the application of GST and other taxes, fair taxation as per the government etc are covered under this body of law.</string>
    <string name="Entertainment_Law">Deals with all the matters that come under the media industry.</string>
    <string name="Administrative_Law">includes issues on rulemaking, adjudication, or the enforcement of a specific regulatory agenda etc.
</string>
    <string name="Sports_Law">Deals with issues related to the athletes and the sports played by them. Variety of issues like a contract, constitutional, trademark, criminal, tort, agency, antitrust, labour, and tex issues are covered under this body of law.</string>
    <string name="Contract_Law">Issues based on finalizing a contract between two parties, breaching of the contract etc are covered under this body of law.</string>
    <string name="invalid_name">Please Enter Valid Name</string>
    <string name="invalid_phone">Please Enter Valid Phone Number</string>
    <string name="invalid_case">Please Enter Valid Case</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="invalid_password">Enter 6 digit password</string>
    <string name="invalid_pass"><![CDATA[Must have at least 1 digit,1 uppercase , 1 spacial character, 6 place digit & no white space allowed]]></string>
    <string name="First_Information_Report">The first information report means an information recorded by a police officer on duty given either by the aggrieved person or any other person to the commission of an alleged offence. On the basis of first information repost, the police commences its investigation. Section 154 of the Code of Criminal Procedure, 1973 defines as to what amounts to first information. Every information relating to the commission of a cognizable offence, if given orally to an officer-in -charge of a police station, shall be reduced to writing by him or under his direction, and be read over to the informant; and every such information, whether given in writing or reduced to writing as aforesaid shall be signed by the person giving it, and the substance thereof shall be entered in a book to be kept by such officer in such form as the State Government may prescibe in this behalf. A copy of the information as recorded under sub-section. Shall be given forthwith, free of cost, to the informant. Any person aggrieved by a refusal on the part of an officer-in-charge of police station to record the information referred to in sub-section. May send the substance of such information, in writing and by post to the Superintendent of Police concerned, who if satisfied that such information discloses the commission of cognizable offence shall either investigation the case himself or direct an investigation to be made by any police officer subordinate to him, in the manner provided by this code, and such officer shall have all the powers of an officer-in-charge of the police station in relation to that offence.</string>
    <string name="invalidpass">Must have atleast 1 digit, 1 uppercase,1 special character and anything, at least six places though, no whitespace allowed in the entire string</string>
    <string name="Following_are_the_reports_or_statements_which_do_not_amount_to_be_an_FIR">a report or a statement recorded after the commencement of the investigation(sections 162 and 163 of the Code of Criminal Procedure , 1973). Reports not recorded immediately but after questioning of witnesses. Reports recorded after several days of deployments. Information not about occurrence of cognizable offence but only cryptic message in the form of an appeal for immediate help. Complaint to the Magistrate. Information to beat house. Inforamtion to the Magistrate or police officer on phone. Information received at police station prior to the lodging of an F.LR.</string>
    <string name="Why_FIR_should_be_filed_promptly">This is the golden principle of law prescribed in the Code of Criminal Procedure, 1973 that the First Information Report should always be filed promptly and without wasting any time. Such type of report gains the maximum credibility and is always welcome and appreciated by the courts. According to Supreme Court the FIR recorded promptly before the time afforded to embellish or do away with the evidence is useful. It eliminates the possible chance of giving rise to suspicion.</string>
    <string name="Where_to_File_an_FIR">An FIR can be filed in the police station of the concerned area in whose jurisdiction the offence has occurred. A first are to obtain information about the alleged criminal activity so as to be able to take suitable steps for tracing and bringing to book the guilty person. Its secondary though equally important object is to obtain is to obtain early information of an alleged criminal activity and to record the circumstances before the trial, lest such circumstances are forgotten or embellished.</string>
</resources>