<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:openDrawer="start"
    tools:context=".criminal_law">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Criminal Law"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            />
        <View
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@color/black" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#ffcccc"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="First Information Report(FIR)"
                        android:textColor="#ff0000"
                        android:textSize="25dp"
                        />
                    <TextView
                        android:id="@+id/textview11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/First_Information_Report"
                        android:textColor="#000000"
                        android:textSize="17dp"
                        android:layout_marginStart="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#ffcccc"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Where to File an FIR?"
                        android:textColor="#ff0000"
                        android:textSize="25dp"
                        />
                    <TextView
                        android:id="@+id/textview7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Where_to_File_an_FIR"
                        android:textColor="#000000"
                        android:textSize="17dp"
                        android:layout_marginStart="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#ffcccc"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Why FIR should be filed promptly?"
                        android:textColor="#ff0000"
                        android:textSize="25dp"
                        />
                    <TextView
                        android:id="@+id/textview8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Why_FIR_should_be_filed_promptly"
                        android:textColor="#000000"
                        android:textSize="17dp"
                        android:layout_marginStart="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#ffcccc"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Following are the reports or statements which do not amount to be an FIR:"
                        android:textColor="#ff0000"
                        android:textSize="25dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Following_are_the_reports_or_statements_which_do_not_amount_to_be_an_FIR"
                        android:textColor="#000000"
                        android:textSize="17dp"
                        android:layout_marginStart="10dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">
        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>